add sections and cards with bootstrap

--- a/index.html
+++ b/index.html
@@ -5,18 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortfolioWeb-ArgentinaPrograma</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
+      integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body>
-    <header class="header card mat-card">
-      <div class="navbar">
-        <img src="" alt="" />
-        <h2>Carlos Bonavita</h2>
-        <p>Desarrollador fullstack jr.</p>
-        <p>Buenos Aires (Argentina)</p>
+  <body class=".bg-light.bg-gradient">
+    <header class="border border-dark border-3 rounded m-1 header p-4"></header>
+    <div
+      class="profile-info border-0 bg-transparent card text-dark d-flex col-4 flex-column align-items-center"
+    >
+      <div class="card-body text-center d-flex flex-column align-items-center">
+        <img
+          class="navbar-img img-fluid rounded-circle"
+          src="./img/charlybgood.jpg"
+          alt=""
+        />
+        <h3 class="card-title">Carlos Bonavita</h3>
+        <h6 class="card-text">Desarrollador Fullstack jr.</h6>
+        <p class="card-text">Buenos Aires (Argentina)</p>
       </div>
-    </header>
-
+      <div class="card p-4 w-full">
+        <h4 class="card-text">
+            manejo de tecnologías:
+        </h4>
+      </div>
+    </div>
+    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
       integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
