--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class=".bg-light.bg-gradient">
+  <body class="bg-light bg-gradient">
     <header class="border border-dark border-3 rounded m-1 header p-2">
       <nav class="navbar align-items-start">
         <div class="d-flex flex-column">
