--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
       </div>
       
     </div>
-    <div class="card border-1 m-1 p-4 top-4">
+    <div class="card border-1 m-1 p-4">
       <h4 class="card-text">manejo de tecnologías:</h4>
       <p>Html, css, javascript, nodejs, express</p>
+    </div>
+    <div class="card border-1 m-1 p-4 ">
+      <h1 class="card-text">Experiencia:</h1>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
