--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="d-flex flex-column">
           <img
             class="img-fluid img-header"
-            src="/img/argprog.png"
+            src="./img/argprog.png"
             alt="logo de argentina programa"
           />
           <h6 class="text-white">Argentina Programa</h6>
