--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
       </div>
       
     </div>
-    <div class="card border-1 m-1 p-4">
-      <h4 class="card-text">manejo de tecnologías:</h4>
-      <p>Html, css, javascript, nodejs, express</p>
-    </div>
     <div class="card border-1 m-1 p-4 ">
       <h1 class="card-text">Experiencia:</h1>
+      <p class="card-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eligendi dignissimos voluptatum vitae provident eaque repudiandae itaque a recusandae laboriosam perspiciatis repellendus, sed delectus porro dolor consequatur quidem dolores aperiam?
+      </p>
     </div>
+    <div class="card border-1 m-1 p-4">
+      <h4 class="card-text">manejo de tecnologías:</h4>
+      <p>Html, css, javascript, nodejs, express, Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, expedita ut, eos maxime ipsa numquam fugiat, reprehenderit facere repudiandae quaerat tenetur voluptate inventore odio voluptatem assumenda illum neque ex eaque.</p>
+    </div>    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
       integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
